--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,9 +7,9 @@ spring:
     banner-mode: off
 
   datasource:
-    url: jdbc:mysql://localhost:3306/bank
-    username: developer
-    password: password
+    url: ${datasource.url}
+    username: ${datasource.username}
+    password: ${datasource.password}
 
   jpa:
     show-sql: false
