task (email sender) done

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,14 +12,32 @@ spring:
     banner-mode: off
 
   datasource:
-    url: ${datasource.url}
-    username: ${datasource.username}
-    password: ${datasource.password}
+    url: jdbc:postgresql://localhost:5432/bankapp
+    username: ${user.postgresql}
+    password: ${password.postgresql}
 
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
+
+  mail:
+    host: localhost
+    port: 1025
+    username: hello
+    password: hello
+
+    properties:
+      mail:
+        smtp:
+          ssl:
+            trust: "*"
+          auth: true
+          starttls:
+            enable: true
+          connectiontimeout: 5000
+          timeout: 3000
+          writetimeout: 5000
 
 
   liquibase:
