task (email sender) done (refactor)

--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,14 @@
             <scope>runtime</scope>
         </dependency>
 
-<!--        DELETE!!!!!!!!!!!!!!!!!!!!!!!!-->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.7</version>
         </dependency>
+
+
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
