--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,5 +43,9 @@ spring:
   liquibase:
     change-log: classpath:/db/changelog/changelog-master.xml
 
+#logging:
+#  level:
+#    org.springframework: DEBUG
+
 
 
