--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.12.441</version>
+        </dependency>
+
+
 
     </dependencies>
 
