--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <artifactId>aws-java-sdk</artifactId>
             <version>1.12.441</version>
         </dependency>
+<!--        Dependency for Credit Card generate number-->
+        <dependency>
+            <groupId>net.andreinc</groupId>
+            <artifactId>mockneat</artifactId>
+            <version>0.4.8</version>
+        </dependency>
 
 
 
