--- a/pom.xml
+++ b/pom.xml
@@ -106,19 +106,37 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>1.12.441</version>
-        </dependency>
-<!--        Dependency for Credit Card generate number-->
+        <!--        For Credit Card generate number-->
         <dependency>
             <groupId>net.andreinc</groupId>
             <artifactId>mockneat</artifactId>
             <version>0.4.8</version>
         </dependency>
+        <!--        For Swagger-->
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>swagger-ui</artifactId>
+            <version>4.18.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
